[package]
name = "liquid-json"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "A Liquid template engine for JSON"
repository = "https://github.com/jsoverson/liquid-json"

[features]
default = ["serde"]
serde = ["serde/derive"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
liquid = "0.26"
liquid-core = "0.26"
liquid-lib = "0.26"
serde_json = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
regex = "1.8"
once_cell = "1.17"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = { version = "1.0" }
rstest = { version = "0.17" }
